kubernetes/apps/default/price-patrol/app/httproute.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: price-patrol
  annotations:
    gatus.home-operations.com/endpoint: |
      path: /healthz
      conditions:
        - "[STATUS] == 200"
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  hostnames:
    - "price-patrol.${SECRET_DOMAIN}"
  rules:
    - backendRefs:
        - name: price-patrol
          port: 8080
